fix mobile spacing faro calculator

--- a/style.css
+++ b/style.css
@@ -245,27 +245,6 @@ section {
     }
 }
 
-@media (max-width: 768px) {
-    header {
-        background-image: linear-gradient(
-          rgba(0, 0, 0, 0.1), 
-          rgba(0, 0, 0, 0.4)
-        ), url('assets/max.png'), url('assets/f1-hero.jpg');
-        background-repeat: no-repeat, no-repeat;
-        background-position: left top, right top, right bottom;
-        background-size: cover, cover;
-    }
-    #app {
-        flex-direction: column;
-        top: 0;
-
-        #sidebar {
-            width: 100%;
-        }
-    }
-}
-
-
 footer {
     text-align: center;
     margin-bottom: 2rem;
@@ -319,3 +298,35 @@ footer {
     }
     details { margin-top: 10px; }
     summary { cursor: pointer; }
+
+
+@media (max-width: 768px) {
+    header {
+        background-image: linear-gradient(
+          rgba(0, 0, 0, 0.1), 
+          rgba(0, 0, 0, 0.4)
+        ), url('assets/max.png'), url('assets/f1-hero.jpg');
+        background-repeat: no-repeat, no-repeat;
+        background-position: left top, right top, right bottom;
+        background-size: cover, cover;
+    }
+    #app {
+        flex-direction: column;
+        top: 0;
+
+        #sidebar {
+            width: 100%;
+        }
+    }
+
+    #calculator .controls {
+        display: none;
+    }
+
+    section {
+        .content {
+            padding: 1rem;
+        }
+    }
+}
+
